<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Postern</string>
    <string name="target">Targets</string>
    <string name="about">About</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="vpn_on">VPN On</string>
    <string name="vpn_off">VPN Off</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="import_from_local">Import Local</string>
    <string name="import_from_url">Import URL</string>
    <string name="import_success">Import Succeeded</string>
    <string name="import_fail">Import Failed</string>
    <string name="import_url_invalid">Invalid URL</string>
    <string name="import_url_open_fail">Connection Failed</string>
    <string name="import_url_dl_fail">Downloading Failed</string>
    <string name="import_url_too_large">File Too Large</string>
    <string name="import_file_invalid">File Format Invalid</string>
    <string name="import_url_unknown">Unknown Failure</string>
    <string name="import_local_fail">Failed to open file manager</string>
    <string name="pc_being_used">The proxy is being used by some rule!</string>
    <string name="pc_delete_fail">Failed to delete proxy!</string>
    <string name="proxy_string">Proxy</string>
    <string name="name">Server Name</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="addproxy">Add Proxy</string>
    <string name="ok">OK</string>
    <string name="proxy_type">Server Type</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="encryption">Encryption</string>
    <string name="ota_enable_str">One-Time Auth(OTA)</string>
    <string name="port_warning">Port must be in the range of 0 to 65535</string>
    <string name="proxy_name_warning1">Proxy must have a name</string>
    <string name="proxy_name_warning2">Proxy name must be no longer than 32 characters</string>
    <string name="proxy_name_warning3">"Proxy name must contain 'a-Z', '1-9' and '_' only"</string>
    <string name="del_proxy_confirm">The proxy will be deleted. Are you sure?</string>
    <string name="proxy_group_string">Proxy Group</string>
    <string name="addproxygroup">Add Proxy Group</string>
    <string name="proxy_group_name">Proxy Group Name</string>
    <string name="proxy_group_option">Options</string>
    <string name="addrule">Add Rule</string>
    <string name="rule_string">Rule</string>
    <string name="rule_action_direct">Passthrough</string>
    <string name="rule_action_direct_sniffer">Passthrough And Sniff</string>
    <string name="rule_action_proxy">Through Proxy</string>
    <string name="rule_action_proxy_sniffer">Through Proxy And Sniff</string>
    <string name="rule_action_block">Block</string>
    <string name="rule_action_smart">Smart Select</string>
    <string name="rule_action_proxy_group">Proxy Group</string>
    <string name="rule_action_unknown">Unknown</string>
    <string name="rule_type_geoip">Match Geographic IP</string>
    <string name="rule_type_ipcidr">Match CIDR IP</string>
    <string name="rule_type_domain_keyword">Match Domain Keyword</string>
    <string name="rule_type_domain_suffix">Match Domain Suffix</string>
    <string name="rule_type_domain">Match Domain</string>
    <string name="rule_type_default">Match All</string>
    <string name="rule_type_unknown">Unknown</string>
    <string name="rule_unknown_proxy">Unknown Proxy</string>
    <string name="rule_unknown_proxy_group">Unknown Proxy Group</string>
    <string name="rule_type_str">Match Method</string>
    <string name="rule_action_str">Rule</string>
    <string name="proxy_str">Proxy/Proxy Group</string>
    <string name="sniffer_enable_str">Data Sniffer</string>
    <string name="target_str">Targets</string>
    <string name="rule_warning">Target group contains illegal data</string>
    <string name="rule_warning2">A proxy server must be selected</string>
    <string name="rule_warning3">Must specify at least one target</string>
    <string name="rule_warning4">A proxy group must be selected</string>
    <string name="del_rule_confirm">The rule will be deleted. Are you sure?</string>
    <string name="prevpage">Previous Page</string>
    <string name="nextpage">Next Page</string>
    <string name="addhosts">Add Host-IP mapping</string>
    <string name="hostname">Host</string>
    <string name="ipname">IP address</string>
    <string name="domain_warning">Domain name not valid</string>
    <string name="hostip_warning">IP not valid</string>
    <string name="dns_auto_enable">Auto-Detect DNS</string>
    <string name="dns_server_str">DNS Server</string>
    <string name="ip_warning">DNS server must have a valid IP address</string>
    <string name="userguide"><a href="https://github.com/postern-overwal/postern-stuff/blob/master/Postern-User-Guide-Eng.pdf">User Guide</a></string>
    <string name="userguide_link">https://github.com/postern-overwal/postern-stuff/blob/master/Postern-User-Guide-Eng.pdf</string>
    <string name="contact">Contact and bug report</string>
    <string name="email">weiwang.tunnel@gmail.com</string>
    <string name="Or">Or click below icons to follow us</string>
    <string name="official">https://github.com/postern-overwal/postern-stuff</string>
    <string name="twitter">https://twitter.com/postern_overwal</string>
    <string name="facebook">https://www.facebook.com/people/Postern-Overwal</string>
    <string name="version">Postern 3.1.2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="view_hex">Show Hex</string>
    <string name="view_ascii">Show ASCII</string>
    <string name="view_hex_ascii">Show Hex and ASCII</string>
    <string name="sniffer_refresh">Refresh</string>
    <string name="sniffer_record">View by Packet</string>
    <string name="sniffer_conn">View by Connection</string>
    <string name="sniffer_fail">Failed to obtain Sniffer trace</string>
    <string name="sniffer_local">local</string>
    <string name="rule_insert_before">Insert new rule before</string>
    <string name="rule_insert_after">Insert new rule after</string>
    <string name="rule_delete">Delete</string>
</resources>
