<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/name" />
        <EditText android:id="@id/proxyname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/address" />
        <EditText android:id="@id/address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/port" />
        <EditText android:id="@id/port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" android:digits="\ 1234567890" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/proxy_type" />
        <Spinner android:id="@id/proxy_type_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/username" />
        <EditText android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/password" />
        <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:password="true" android:singleLine="true" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/encryption" />
        <Spinner android:id="@id/encryption_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <CheckBox android:id="@id/ota_enable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ota_enable_str" />
        <Button android:id="@id/save_proxy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save" />
        <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
        <Button android:id="@id/delete" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete" />
    </LinearLayout>
</ScrollView>