<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rule_type_str" />
        <Spinner android:id="@id/rule_type_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rule_action_str" />
        <Spinner android:id="@id/rule_action_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@id/rule_proxy_str" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/proxy_str" />
        <Spinner android:id="@id/proxy_list_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <CheckBox android:id="@id/sniffer_enable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sniffer_enable_str" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/target_str" />
        <EditText android:id="@id/target_edit" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" />
        <Button android:id="@id/save_rule" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save" />
        <Button android:id="@id/cancel_rule" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
        <Button android:id="@id/delete_rule" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete" />
    </LinearLayout>
</ScrollView>