<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/version" />
    <LinearLayout android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/official_img" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_launcher" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:autoLink="web" android:linksClickable="true" android:id="@id/userguide_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/userguide" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact" />
    <TextView android:autoLink="email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/email" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Or" />
    <LinearLayout android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/facebook_img" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/facebook" android:layout_weight="1.0" />
        <ImageView android:id="@id/twitter_img" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/twitter" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>